Bug 154943 - Accessibility checker warns about missing alt text of decorative-flagged image
Summary: Accessibility checker warns about missing alt text of decorative-flagged image
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords: accessibility
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-04-20 17:04 UTC by Gabor Kelemen (Collabora)
Modified: 2023-07-05 20:52 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file with one decorative marked image (47.83 KB, application/vnd.oasis.opendocument.text)
2023-04-20 17:04 UTC, Gabor Kelemen (Collabora)
Details
Decorative image but sidebar still warns about its missing description (111.64 KB, image/png)
2023-04-20 17:04 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-04-20 17:04:04 UTC
Created attachment 186822 [details]
Example file with one decorative marked image

When an image is marked as decorative, the accessibility sidebar should not warn about its missing alt description.

1. Open attached file
2. Open the Accessibility sidebar
-> sidebar warns about two images missing alt description, but the upper image is also marked as Decorative - so it should be irrelevant for a11y, and no warning should be there.
Word 2019 has this behavior too.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 61b41646c5a93ca24f2c9f143cdb0da2c9258989
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2023-04-20 17:04:47 UTC
Created attachment 186823 [details]
Decorative image but sidebar still warns about its missing description
Comment 2 Gabor Kelemen (Collabora) 2023-04-20 17:08:45 UTC
Also this is the first exception in the relevant 7.3 Graphics section of the PDF/UA standard:

Graphics objects, other than text objects, shall be tagged with a Figure tag as described in
ISO 32000-1:2008, 14.8.4.5, Table 340. If any of the following exceptions are true, then the graphic shall
be tagged as an artifact:
? the graphic does not represent meaningful content, or
? the graphic appears as a background to a link annotation, in which case, the alternative text on the
link shall describe both the graphic and the link.
Comment 3 stragu 2023-04-21 10:49:00 UTC
Reproduced with:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5cd9de202765e243e41416802f3e4486b8a96f16
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2023-06-12 07:37:35 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1b0420e9980324f04bfd4b1316b572331f1e83bc

tdf#154943 - Accessibility checker: fix no warn of decorative-flagged image

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-06-12 12:00:25 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/af32f4f88be29b4b16e0c5b03cb2ea1075aa8e9b

tdf#154943 - Accessibility checker: fix no warn of decorative-flagged image

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 stragu 2023-07-05 20:52:56 UTC
Fix verified in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d74344f6cae0cf1c12f08249c8f49be1374fb98f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded