tdf#154943 - Accessibility checker: fix no warn of decorative-flagged image

If an image marked as Decorative it will be irrelevant for a11y,
and no warning will be on the accessibility sidebar.

Change-Id: If4d25fd8043549832a70b2c2be5aa754c76d9c33
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152737
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
(cherry picked from commit fe7d95eb051312e3174b71be84c122c1837c1f0f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152877
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>